--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -548,11 +548,12 @@ width:70px;height:70px;vertical-align: baseline!important;
 						/* Fire event to show isotope view */
 						if(self.fr.page == 1 ){
 							
-									console.log("loaded");
+									
 									$containerShopList = $('.isotope-wrap').isotope({
 										  itemSelector: '.isotope-item',
 										  masonry: {
-											  columnWidth: 50
+											  columnWidth: 50,
+											  gutterWidth: 10
 											}
 									});
 							 
