--- a/app/views/Tools/confirm.scala.html
+++ b/app/views/Tools/confirm.scala.html
@@ -128,13 +128,13 @@
 					<input type="hidden" name="capturesite" value="@purl">
 				}
 				
-				@inpfld("location","Location")
+				<!-- @inpfld("location","Location")
 				
 				@*
 				
 				@inpfld("servicearea","Service Area")
 				
-				*@
+				*@ -->
 				
 				<div class="control-group">
 				  <label class="control-label"  for="description">Short Description :</label>
