--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -155,8 +155,12 @@
                     <label for="blogcomment">Post a comment</label>
                     <div class="clearfix"></div>
                     <textarea name="cmnttxt" id="" cols="20" rows="3" style="width:80%;"  data-bind="value: cmnttxt"></textarea>
-                  </div>                  
-                  <button type="submit" class="btn btn-default orange">Send</button>
+                  </div>  
+               		@if(controllers.Application.verifyEmail()){
+               	 		<button type="submit" class="btn btn-default orange">Send</button>
+               		} else { 
+               	 		<label style="font-size:12px;color:red">You must verify your email before you can comment</label>
+               		}                    
                 </form>
               </div>
               <!-- End post-comment-form -->
