--- a/app/views/blogpage.scala.html
+++ b/app/views/blogpage.scala.html
@@ -16,14 +16,16 @@
 	@pageheader(){
 		@subjectPresent(){
 	<div class="container smartcontainer">
-		<div class="row">
-			<div class="logout blbanner">
-				<div class="message"><span class="bold">Need to write a blog?? </span></div>
-				<div class="options">
-					<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Application.GetAddBlog()">Write New Blog</a></div>
+		@if(controllers.Application.verifyEmail()){
+			<div class="row">
+				<div class="logout blbanner">
+					<div class="message"><span class="bold">Need to write a blog?? </span></div>
+					<div class="options">
+						<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Application.GetAddBlog()">Write New Blog</a></div>
+					</div>
 				</div>
 			</div>
-		</div>
+		}
 	</div>
 		}
 	}{ }
