--- a/app/views/cshop.scala.html
+++ b/app/views/cshop.scala.html
@@ -245,8 +245,12 @@
 							        gutterWidth: 10
 							  	  }
 							});
-								$(".isotope-item").find(".product-image").load(function(){
+							
+							$(".isotope-item").find(".product-image").load(function(){
 					        	$container.isotope();
+					        	$($(this).parents(".isotope-item")).mouseleave(function(){
+					        		$(this).find('.dropdown').removeClass('open');
+					      		});
 					        });
 						} else {
 							$.each($('.isotope-item'), function(index, elem) {
