--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -79,6 +79,9 @@ function PBDocInit(ldiv)
 					
 					$(".isotope-item").find(".product-image").load(function(){
 			        	$container.isotope();
+			        	$($(this).parents(".isotope-item")).mouseleave(function(){
+			        		$(this).find('.dropdown').removeClass('open');
+			      		});
 			        });
 				} else {
 					$.each($('.isotope-item'), function(index, elem) {
