--- a/app/views/Tools/confirm.scala.html
+++ b/app/views/Tools/confirm.scala.html
@@ -304,7 +304,7 @@
 					parent.document.location.href = "/product/page/"+data;
 				},
 				error: function(jqXHR, textStatus, errorThrown) {
-					console.log("ERROR");
+					self.errormessage("Error while Creating Product, Try Again");
 				}
 			});
 		    e.preventDefault();	//STOP default action
