--- a/app/views/blogpage.scala.html
+++ b/app/views/blogpage.scala.html
@@ -25,6 +25,15 @@
 					</div>
 				</div>
 			</div>
+		} else {
+			<div class="row">
+				<div class="logout blbanner">
+					<div class="message"><span class="bold"> Please	verify your Email address </span></div>
+					<div class="options">
+						<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Account.verifyEmail()">Verify my email</a></div>
+					</div>
+				</div>
+			</div>
 		}
 	</div>
 		}
