--- a/app/views/Templates/pagehead.scala.html
+++ b/app/views/Templates/pagehead.scala.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="@routes.Assets.at("css/colorbox.css")" /> 
     <link rel="stylesheet" href="@routes.Assets.at("bl/css/nsPopover.css")" />
     <link rel="stylesheet" href="@routes.Assets.at("bl/css/ng-table.css")" />
+    <link rel="stylesheet" href="@routes.Assets.at("bl/css/jquery.steps.css")" />
     
     @**<link media="screen" type="text/css" rel="stylesheet" href="@routes.Assets.at("style.css")" />**@
     
@@ -74,6 +75,8 @@
 	<script src="@routes.Assets.at("bl/js/nsPopover.js")"></script>
 	<script src="@routes.Assets.at("bl/js/jquery.nicescroll.js")"></script>
 	<script src="@routes.Assets.at("bl/js/jquery.fileupload.js")"></script>
+	<script src="@routes.Assets.at("bl/js/jquery.steps.js")"></script>
+	<!-- <script src="@routes.Assets.at("bl/js/jquery.steps.min.js")"></script> -->
 	
 	<script src="@routes.Assets.at("bl/js/ng-table.js")"></script>
 	
